--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "concurrently": "^5.1.0"
   },
   "dependencies": {
+    "dotenv": "^16.3.1",
     "graphql": "^15.5.0",
     "mongodb": "^5.7.0",
     "optional-require": "^1.0.3"
