--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "engines": {
+    "node": "18.15.0",
+    "npm": "9.5.0"
+  },
   "devDependencies": {
     "concurrently": "^5.1.0",
     "webpack": "^5.88.2"
